overflow style fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 body {
+  overflow-x: hidden !important;
   overflow-y: scroll !important;
   margin-left: 0 !important;
   margin-right: 0 !important;
